--- a/backend_sanity_portfolio/package.json
+++ b/backend_sanity_portfolio/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "backendsanityportfolio",
+  "name": "tdgportfolio",
   "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "package.json",
-  "author": "Mandeep Singhmar <msingh8328@gmail.com>",
+  "author": "Kendal Brown <tetramedia85@gmail.com>",
   "license": "UNLICENSED",
   "scripts": {
     "start": "sanity start",
@@ -14,22 +14,18 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.25.4",
-    "@sanity/core": "^2.25.0",
-    "@sanity/default-layout": "^2.25.4",
-    "@sanity/default-login": "^2.24.1",
-    "@sanity/desk-tool": "^2.25.4",
-    "@sanity/eslint-config-studio": "^2.0.0",
-    "@sanity/vision": "^2.25.4",
+    "@sanity/base": "^2.35.2",
+    "@sanity/core": "^2.35.0",
+    "@sanity/default-layout": "^2.35.2",
+    "@sanity/default-login": "^2.35.2",
+    "@sanity/desk-tool": "^2.35.2",
+    "@sanity/eslint-config-studio": "^2.0.1",
+    "@sanity/vision": "^2.35.2",
     "eslint": "^8.6.0",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
     "styled-components": "^5.2.0"
   },
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:adrianhajdin/project_professional_portfolio.git"
-  }
+  "devDependencies": {}
 }
